--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,12 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
 sgmllib3k==1.0.0
+six==1.17.0
 soupsieve==2.6
 SQLAlchemy==2.0.37
 typing_extensions==4.12.2
