--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - .:/app
     command: >
-      sh -c "flask db upgrade && flask run --host=0.0.0.0 --port=5090"
+        sh -c "flask run --host=0.0.0.0 --port=5090"
     networks:
       - app_network
 
